Added more information about this work.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,13 @@ _gaq.push(['_trackPageview']);
               <span class="icon-bar"></span>
             </button>
             <a class="brand" href="/">PrimeFaces <span class="label label-important">unofficial</span></a>
+            <div class="nav-collapse collapse visible-desktop">
+              <p class="navbar-text pull-right" style="margin-right:100px" title="Build Status with CloudBees">
+                <a href="https://buildhive.cloudbees.com/job/primefaces/job/primefaces/" class="navbar-link">
+                   <img src="https://buildhive.cloudbees.com/job/primefaces/job/primefaces/badge/icon"/>
+                </a>
+              </p>
+            </div>
           </div>
         </div>
       </div>
