--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -42,8 +42,15 @@ body {
 /* Not required for template or sticky footer method. */
 
 #wrap > .container {
-  padding-top: 60px;
+  padding-top: 40px;
 }
+
+@media (max-width: 979px) {
+  #wrap > .container {
+    padding-top: 0px;
+  }
+}
+
 .container .credit {
   margin: 20px 0;
 }
